# fpkg

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.txt
.gitlab/support/: windows.ps1
BPX/: Cargo.toml
BPX/src/: bpx.rs  bpxp.rs  garraylen.rs  lib.rs  sd.rs  section.rs  strings.rs  structureddata.rs  utils.rs
BPX/tests/: bpx.rs
BPXTools/: Cargo.toml
BPXTools/src/: bpxinfo.rs  main.rs  pack.rs  printsd.rs  type_ext_maps.rs  unpack.rs
BPXTools/test/: test.pl  test.sh
BPXTools/test/available/: 01-pack-simple  01-pack-simple.pl  01-pack-simple.stdout  02-unpack-simple  02-unpack-simple.pl  02-unpack-simple.stdout  03-pack-complex  03-pack-complex.pl  (+22 more)
Client/: Cargo.toml
Client/lua/: cmake.lua  script.lua
Client/src/: bpxp.rs  builder.rs  cmakebuilder.rs  cmakegenerator.rs  command.rs  common.rs  garraylen.rs  generator.rs  gitlabregistry.rs  hosttoolchain.rs  installer.rs  lib.rs  luabuilder.rs  luaengine.rs  lualibcommand.rs  lualibfile.rs  lualibfpkg.rs  lualiblog.rs  lualibstring.rs  lualoader.rs  main.rs  minishell.rs  noopgenerator.rs  packager.rs  profile.rs  publisher.rs  registry.rs  resources.rs  scripts.rs  settings.rs  toolchain.rs
Client/src/bpx/: bpx.rs  bpxp.rs  garraylen.rs  mod.rs  section.rs  strings.rs
Client/test/: bpx.rs
Client/wix/: main.wxs
CrossShell/: Cargo.toml
CrossShell/src/: lib.rs  parser.rs
GitLabGenericPackages/: Cargo.toml
GitLabGenericPackages/src/: lib.rs  list.rs  manager.rs  types.rs
TestZlib/: fpkg.lua
src/: builder.rs  command.rs  installer.rs  lualoader.rs  main.rs  profile.rs
