[package]
name = "fpkg"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.0"
rlua = "0.16.2"
json = "0.12.4"
winapi = "0.3.6"
regex = "1"
tempfile = "3.0.7"
bpx = { path = "../BPX" }
glgp = { path = "../GitLabGenericPackages" }

[[bin]]
name = "fpkg"

[profile.dev]
opt-level = 1
overflow-checks = false
